{
    "name": "MixedControls",
    "maps": [
        {
            "name": "Player1",
            "id": "cef88b42-f582-4ce8-a423-cd93666d66c8",
            "actions": [
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "d9fe5b24-5760-4859-bec7-a49c33d858f0",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "cffe9952-b2ac-473e-bbb4-63410c956997",
                    "path": "<Pointer>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Keyboard",
                    "id": "87155d39-339a-4984-b8bb-6efe2d9b4078",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "11b758a6-1d11-4a1e-a28e-4a23421793aa",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "47b061b9-9d86-42e2-a8f1-ff2b4fedb56d",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "00b95b6e-7688-4c3d-9c72-80c758f6dd17",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "b20d1b68-c7af-42ab-b6f2-da4f102a13a1",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Player2",
            "id": "1357572c-86d4-4cfa-99b7-9db04970b393",
            "actions": [
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "fed18974-1567-4809-ae13-923c7267a2bc",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ce5eb23f-1e34-4641-b751-c570f03bfc37",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "782fbafd-3577-489a-b134-ca00d84ce203",
                    "path": "<Joystick>/{Hatswitch}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "e1531b14-b10d-4d99-b696-acfed798d39b",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "ee8533af-ff65-4c98-a92b-70800ce83f03",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e378cba0-93ec-4d6a-9e1b-e88ff9f1d7a4",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}